fixed registration mobile

--- a/ClientApp/src/custom.scss
+++ b/ClientApp/src/custom.scss
@@ -103,6 +103,10 @@ h4 {
 
 .registration {
   padding: 1rem;
+  height: 65vh;
+  .form-group {
+    margin-bottom: 0rem;
+  }
 }
 @media (min-width: 768px) {
   .table-responsive {
@@ -147,6 +151,9 @@ h4 {
     h1 {
       font-size: 4rem;
       padding: 3rem;
+    }
+    h3 {
+      font-size: 2.5rem;
     }
   }
   .table-responsive {
